feat(src/vab/styles/vab.scss): 定义全局高度.使其撑开全部盒子

--- a/src/vab/styles/vab.scss
+++ b/src/vab/styles/vab.scss
@@ -57,6 +57,7 @@ html {
           transition: $base-transition;
 
           > section {
+            height: calc( 100vh - 60px*3 - 25px );
             background: $base-color-white;
             transition: $base-transition;
 
