fix(src/vab/styles/vab.scss): 解决Notification大小偶尔变大

--- a/src/vab/styles/vab.scss
+++ b/src/vab/styles/vab.scss
@@ -200,7 +200,10 @@ html {
       opacity: 0.6;
       backdrop-filter: blur(10px);
     }
+    .el-notification{
+      max-width: 330px !important;
 
+    }
     /* el-image-viewer遮罩 */
     .el-image-viewer__mask {
       background-color: rgba(0, 0, 0, 0.5);
