--- a/src/vab/styles/variables/variables.scss
+++ b/src/vab/styles/variables/variables.scss
@@ -79,7 +79,8 @@ $base-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), border 0s,
   color 0.1s, font-size 0s;
 //默认动画长
 $base-transition-time: 0.3s;
-
+//footer 的高度
+$base-footer-height: 50px;
 :export {
   // 菜单文字颜色变量导出
   menu-color: $base-menu-color;
